--- a/bs/style.css
+++ b/bs/style.css
@@ -28,7 +28,7 @@
 
 .card-img-top {
     width: 90%;
-    height: 225px
+
 }
 
 .view {
@@ -64,4 +64,9 @@
 
 .home-cards-container {
     margin-bottom: 40px;
+}
+
+.butuser {
+    text-decoration: none;
+    color: white;
 }
